# sol-market

./: .env.production.example  .gitignore  .htaccess  .vercelignore  BRAND_GUIDELINES.md  CPANEL_DEPLOYMENT.md  DATABASE_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  UPLOAD_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.ts  test-client.ts
anchor/: Anchor.toml  codama.js
anchor/programs/auction/: Cargo.toml
anchor/programs/auction/src/: lib.rs
anchor/programs/raffle/: Cargo.toml
anchor/programs/raffle/src/: lib.rs
anchor/programs/swap/: Cargo.toml
anchor/programs/swap/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx
components/: SwapWidget.tsx  animated-background.tsx  create-listing-modal.tsx  custom-icons.tsx  escrow-status.tsx  floating-shapes.tsx  gsap-animations.tsx  hero-section.tsx  listing-card.tsx  navbar.tsx  parallax-scroller.tsx  profile-card.tsx  svg-illustrations.tsx
hooks/: use-escrow.ts  use-program.ts  useAuction.ts  useRaffle.ts  useSwap.ts  useTokenBalance.ts
lib/: api-config.ts  auth.ts  constants.ts  cors.ts  db.ts  env.ts  error-handling.ts  escrow.ts  image-upload.ts  solana-escrow.ts  wallet.ts
metadata/: metadata.json
scripts/: build-for-cpanel.js  build-for-cpanel.sh  build-frontend.sh  create-health-endpoint.sh  deploy-contracts.js  init-db.ts  init-swap.ts  mint-mkn.ts  package-static.js  run-init-db.js  (+4 more)
(+63 files in other folders)
