[package]
name = "raffle"
version = "0.1.0"
description = "Raffle program for SolMarket"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raffle"

[features]
anchor-debug = []
idl-build = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test-sbf = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
borsh = "=1.5.1"
toml_edit = "=0.22.1"
toml_parser = "=1.0.1"
toml_datetime = "=0.6.11"
indexmap = "=2.0.0"






